compiler/tests/compiler/must_fail/t_18.mil.exp.err
Parsing tests/compiler/must_fail/t_18.mil as MIL

tests/compiler/must_fail/t_18.mil:8:3: 8:12 error: wrong number of l-values: got 1, expected 0
  x = bar();
  ^^^^^^^^^^
